<resources>
    <string name="default_notification_channel">default_channel</string>
    <string name="default_foreground_notification_channel">default_foreground_notification_channel</string>
    <string name="notification_channel_description">Notification</string>
    <string name="notification_channel_name">Notification</string>
    <string name="favorite">Favorite</string>
    <string name="explore">Explore</string>
    <string name="que">Xem quẻ</string>
    <string name="calendar">Lịch</string>
    <string name="gia_dao">Gia Đạo:</string>
    <string name="tuoi_mang">Tuổi mạng:</string>
    <string name="buon_ban">Buôn bán:</string>
    <string name="muu_vong">Mưu vọng:</string>
    <string name="luc_suc">Lục súc:</string>
    <string name="nguoi_di">Người đi:</string>
    <string name="hon_nhan">Hôn nhân:</string>
    <string name="kien_tung">Kiện tụng:</string>
    <string name="that_vat">Thất vật:</string>
    <string name="doan_benh">Đoán bệnh:</string>
    <string name="so_que_title">Quẻ số %d: %s</string>
    <string name="time_title">Tháng %s</string>
    <string name="van_khan">Văn Khấn</string>
    <string name="xem_que">Xem Quẻ</string>
    <string name="home_recent_empty">Your workouts history will appear here.</string>
    <string name="all_week">Week</string>
    <string name="all_month">Month</string>
    <string name="year">Year</string>
    <string name="day_lunar">%s Âm Lịch</string>
    <string name="year_lunar">Năm %s</string>
    <string name="day_lunar_name">Ngày %s</string>
    <string name="xuat_hanh_khong_minh">Xuất Hành theo Khổng Minh:</string>
    <string name="xuat_hanh_khong_minh_des">\tHướng %s: %s\n\t*Ngày xuất hành theo lịch Khổng Minh ở đây nghĩa là ngày đi xa, rời khỏi nhà trong một khoảng thời gian dài, hoặc đi xa để làm hay thực hiện một công việc quan trọng nào đó. Ví dụ như: xuất hành đi công tác, xuất hành đi thi đại học, xuất hành di du lịch (áp dụng khi có thể chủ động về thời gian đi).</string>
    <string name="tai_than_day">Hướng tài thần: %s</string>
    <string name="hy_than_day">Hướng hỷ thần: %s</string>
    <string name="month_lunar">Tháng %s</string>
    <string name="thu_hai">Thứ Hai</string>
    <string name="thu_ba">Thứ Ba</string>
    <string name="thu_tu">Thứ Tư</string>
    <string name="thu_nam">Thứ Năm</string>
    <string name="thu_sau">Thứ Sáu</string>
    <string name="thu_bay">Thứ Bảy</string>
    <string name="chu_nhat">Chủ Nhật</string>
    <string name="gio_hoang_dao">Giờ Hoàng Đạo:</string>
    <string name="star_good_title">Sao Tốt:</string>
    <string name="star_bad_title">Sao Xấu:</string>
    <string name="ngay_status">Ngày %s</string>
    <string name="year_name">Năm %s</string>
    <string name="des_thienCuong">Xấu cho mọi việc</string>
    <string name="des_thuTu">Xấu cho mọi việc</string>
    <string name="des_daiHao">Xấu cho mọi việc</string>
    <string name="des_tuKhi">Xấu cho mọi việc</string>
    <string name="des_quanPhu">Xấu cho mọi việc</string>
    <string name="des_tieuHao">Xấu cho mọi việc</string>
    <string name="des_satChu">Xấu cho mọi việc</string>
    <string name="des_thienHoa">Xấu cho việc xây dựng nhà cửa, kho tàng, làm bếp, lợp bếp</string>
    <string name="des_diaHoa">Xấu cho việc xây dựng nhà cửa, kho tàng, làm bếp, lợp bếp</string>
    <string name="des_hoaTai">Xấu cho việc làm bếp, lợp bếp</string>
    <string name="des_nguyetPha">Xấu cho việc khai trương, cầu tài</string>
    <string name="des_bangTieu">Xấu cho mọi việc</string>
    <string name="des_ngoaGiai">Xấu cho mọi việc</string>
    <string name="des_thoCam">Xấu cho việc động thổ</string>
    <string name="des_thoKy">Xấu cho việc động thổ</string>
    <string name="des_vangVong">Xấu cho mọi việc, đặc biệt là động thổ</string>
    <string name="des_coThan">Xấu cho việc cưới hỏi và nhập trạch</string>
    <string name="des_quaTu">Xấu cho mọi việc, đặc biệt là cưới hỏi</string>
    <string name="des_trungTang">Xấu cho việc cải táng, an táng</string>
    <string name="des_trungPhuc">Xấu cho việc cải táng, an táng</string>
    <string name="des_khongPhong">Xấu cho việc cưới hỏi</string>
    <string name="des_thienTac">Xấu cho việc khai trương, cầu tài, xây dựng nhà cửa, kho tàng</string>
    <string name="des_phuDauDat">Xấu cho việc khởi tạo, lập nghiệp</string>
    <string name="des_nguTu">Xấu cho việc cưới hỏi</string>
    <string name="des_tuThoi">Xấu cho việc cưới hỏi, xây dựng nhà cửa, kho tàng, nhập trạch, di chuyển chỗ ở</string>
    <string name="des_lucBatThanh"> Xấu với việc xây dựng</string>
    <string name="des_hoangSa">Xấu cho việc xuất hành đi xa</string>
    <string name="des_nguyetHu">Xấu cho mọi việc, đặc biệt là cưới hỏi</string>
    <string name="des_nguyetYem">Xấu cho mọi việc</string>
    <string name="des_nguyetHoa">Xấu đối với việc làm bếp, lợp nhà</string>
    <string name="des_tieuHongSa">Xấu cho mọi việc</string>
    <string name="des_cuaKhong">Xấu cho mọi việc</string>
    <string name="des_chuTuoc">Xấu cho mọi việc, đặc biệt khai trương cầu tài</string>
    <string name="des_haKhoi">Xấu cho mọi việc</string>
    <string name="des_nguQuy">Xấu cho việc xuất hành đi xa</string>
    <string name="des_phiMaSat">Xấu cho việc nhập trạch, di chuyển chỗ ở</string>
    <string name="des_thanCach">Xấu cho việc cúng tế</string>
    <string name="des_nhanCach">Xấu cho việc cưới hỏ</string>
    <string name="des_diaTac">Xấu cho việc động thổ</string>
    <string name="des_nguyetKien">Xấu cho việc động thổ</string>
    <string name="des_thienDia">Xấu cho việc động thổ</string>
    <string name="des_loBanSat">Xấu cho việc xây dựng nhà cửa, kho tàng</string>
    <string name="des_nguyetHinh">Xấu cho mọi việc</string>
    <string name="des_toiChi">Xấu với việc tế tự, kiện tụng</string>
    <string name="des_tamTang">Xấu cho việc an táng, cải táng</string>
    <string name="des_thienHinh">Xấu cho mọi việc</string>
    <string name="des_thienLao">Xấu cho mọi việc</string>
    <string name="des_cauTran">Xấu cho mọi việc</string>
    <string name="des_satSu">Xấu cho mọi việc</string>
    <string name="des_bachHo">Xấu cho mọi việc, đặc biệt là cải táng</string>
    <string name="des_lySang"> Xấu cho việc nhập trạch, di chuyển chỗ ở</string>
    <string name="des_nguyenVu">Xấu cho mọi việc</string>
    <string name="des_thienDuc">Tốt mọi việc</string>
    <string name="des_thienDucHop">Tốt mọi việc</string>
    <string name="des_nguyetDuc">Tốt mọi việc</string>
    <string name="des_nguyetDucHop">Tốt mọi việc, kỵ tố tụng</string>
    <string name="des_thienHy">Tốt mọi việc, nhất là hôn thú</string>
    <string name="des_thienPhu">Tốt mọi việc nhất là xây dựng nhà cửa, khai trương và an táng</string>
    <string name="des_thienQuy1">Tốt mọi việc</string>
    <string name="des_thienQuy2">Tốt mọi việc</string>
    <string name="des_thienXa">Tốt cho tế tự, giải oan, trừ được các sao xấu, chỉ kiêng kỵ động thổ. Nếu gặp trực khai thì rất tốt tức là ngày thiên xá gặp sinh khí</string>
    <string name="des_sinhKhi">Tốt mọi việc, nhất là làm nhà, sửa nhà, động thổ, trồng cây</string>
    <string name="des_thienPhuc1">Tốt mọi việc</string>
    <string name="des_thienPhuc2">Tốt mọi việc</string>
    <string name="des_thienThanh">Tốt mọi việc</string>
    <string name="des_thienQuan">Tốt mọi việc</string>
    <string name="des_thienMa">Tốt cho việc xuất hành, giao dịch, cầu tài lộc</string>
    <string name="des_kimQuy">Tốt cho việc cầu tài lộc, khai trương</string>
    <string name="des_baoQuang">Tốt cho việc cầu tài lộc, khai trương</string>
    <string name="des_nguyetTai">Tốt cho việc cầu tài lộc, khai trương, xuất hành, di chuyển, giao dịch</string>
    <string name="des_nguyetAn">Tốt mọi việc</string>
    <string name="des_nguyetKhong">Tốt cho việc làm nhà, làm gường</string>
    <string name="des_minhTinh">Tốt mọi việc</string>
    <string name="des_thanhTam">Tốt mọi việc, nhất là cầu phúc, tế tự</string>
    <string name="des_nguPhu">	Tốt mọi việc</string>
    <string name="des_locKho">Tốt cho việc cầu tài, khai trương, giao dịch</string>
    <string name="des_phucSinh">Tốt mọi việc</string>
    <string name="des_catKhanh">Tốt mọi việc</string>
    <string name="des_amDuc">Tốt mọi việc</string>
    <string name="des_uViTinh">Tốt mọi việc</string>
    <string name="des_macDucTinh">Tốt mọi việc</string>
    <string name="des_kinhTam">Tốt đối với tang lễ</string>
    <string name="des_tueHop">Tốt mọi việc</string>
    <string name="des_nguyetGiai">Tốt mọi việc</string>
    <string name="des_quanNhat">Tốt mọi việc</string>
    <string name="des_hoatDieu">Tốt nhưng gặp Thụ tử thì xấu</string>
    <string name="des_giaiThan">Tốt cho việc tế tự,tố tụng, gải oan (trừ được các sao xấu)</string>
    <string name="des_phoHo">Tốt mọi việc, làm phúc, giá thú, xuất hành</string>
    <string name="des_ichHau">Tốt mọi việc, nhất là giá thú</string>
    <string name="des_tucThe">Tốt mọi việc, nhất là giá thú</string>
    <string name="des_yeuYen">Tốt mọi việc, nhất là giá thú</string>
    <string name="des_dichMa">Tốt mọi việc, nhất là xuất hành</string>
    <string name="des_tamHop1">Tốt mọi việc</string>
    <string name="des_tamHop2">Tốt mọi việc</string>
    <string name="des_lucHop">Tốt mọi việc</string>
    <string name="des_mauThuong1">Tốt về cầu tài lộc, khai trương</string>
    <string name="des_mauThuong2">Tốt về cầu tài lộc, khai trương</string>
    <string name="des_phucHau">Tốt về cầu tài lộc, khai trương</string>
    <string name="des_daiHongSa1">Tốt mọi việc</string>
    <string name="des_daiHongSa2">Tốt mọi việc</string>
    <string name="des_danNHat">Tốt mọi việc</string>
    <string name="des_hoangAn">Tốt mọi việc</string>
    <string name="des_thanhLongHoangDao">Tốt mọi việc</string>
    <string name="des_minhDuong">Tốt mọi việc</string>
    <string name="des_kimDuong">Tốt mọi việc</string>
    <string name="des_ngocDuong">Tốt mọi việc</string>
    <string name="home_exit">Nhấn lại để thoát</string>
    <string name="ok">OK</string>
    <string name="cancel">Hủy bỏ</string>
    <string name="saveButton">Lưu</string>
    <string name="cancelButton">Hủy Bỏ</string>
    <string name="tv_title_date">Nhập ngày sinh Dương Lịch:</string>
    <string name="tv_year_xong_dat">Nhập năm muốn xem:</string>
    <string name="tv_birthday_gia_chu">Nhập ngày sinh Dương Lịch gia chủ:</string>
    <string name="tv_title_note">Nhập tiêu đề:</string>
    <string name="tv_des_note">Nhập nội dung:</string>
    <string name="tv_title_day">Ngày:</string>
    <string name="tv_title_month">Tháng:</string>
    <string name="tv_title_year">Năm:</string>
    <string name="tv_title_time">Nhập giờ sinh:</string>
    <string name="tv_note_time">Hẹn giờ lời nhắc:</string>
    <string name="tv_xem_tu_vi">Xem Tử Vi</string>
    <string name="tv_xem_ket_qua">Xem Kết Quả</string>
    <string name="tv_title_sex">Giới Tính:</string>
    <string name="title_name">Chọn Giới Tính:</string>
    <string name="title_year">Chọn Năm:</string>
    <string name="don_thu_mot_sao">-Sao %s đơn thủ: %s</string>
    <string name="dong_cung_sao">-Sao %s cùng với %s đồng cung: %s</string>
    <string name="dong_cung_tai_sao">-Sao %s cùng với %s đồng cung tại %s: %s</string>
    <string name="hint_des_note">Nội dung</string>
    <string name="hint_title_note">Tiêu đề</string>
    <string name="tv_title_add">Thêm nhắc nhở</string>
    <string name="tv_xong_dat">Xông Đất</string>
    <string name="tv_cung_menh">Cung Mệnh</string>
    <string name="tv_tinh_tuoi">Tính Tuổi Âm Dương</string>
    <string name="tv_que_bac_de">Xin Quẻ Bắc Đế</string>
    <string name="tv_van_khan">Văn Khấn</string>
    <string name="note">Chú thích</string>
    <string name="note_xong_dat">- Để tính tuổi hợp với gia chủ ta dựa vào các yếu tố tương quan giữa 3 thành phần gồm tuổi gia chủ, tuổi người xông và can chi năm âm lịch\n\n- Điểm được tính bằng hệ số 12, tuổi có điểm càng cao thì sẽ càng hợp để xông đất nhà gia chủ</string>
</resources>