<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_02">

    <com.jarvis.amlich.presentation.ui.widget.ViewDanhMucVanNien
        android:id="@+id/viewXinQue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/px16"
        android:layout_marginTop="@dimen/px16"
        android:layout_marginEnd="@dimen/px8"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/viewXongDat"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/tv_que_bac_de" />

    <com.jarvis.amlich.presentation.ui.widget.ViewDanhMucVanNien
        android:id="@+id/viewXongDat"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/px8"
        android:layout_marginTop="@dimen/px16"
        android:layout_marginEnd="@dimen/px16"
        app:layout_constraintLeft_toRightOf="@id/viewXinQue"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/tv_xong_dat" />

    <com.jarvis.amlich.presentation.ui.widget.ViewDanhMucVanNien
        android:id="@+id/viewTuVi"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/px16"
        android:layout_marginTop="@dimen/px16"
        android:layout_marginEnd="@dimen/px8"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/viewCungMenh"
        app:layout_constraintTop_toBottomOf="@+id/viewXinQue"
        app:title="@string/tv_xem_tu_vi" />

    <com.jarvis.amlich.presentation.ui.widget.ViewDanhMucVanNien
        android:id="@+id/viewCungMenh"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/px8"
        android:layout_marginTop="@dimen/px16"
        android:layout_marginEnd="@dimen/px16"
        app:layout_constraintLeft_toRightOf="@id/viewTuVi"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewXongDat"
        app:title="@string/tv_cung_menh" />

    <com.jarvis.amlich.presentation.ui.widget.ViewDanhMucVanNien
        android:id="@+id/viewTinhTuoi"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/px16"
        android:layout_marginTop="@dimen/px16"
        android:layout_marginEnd="@dimen/px8"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/viewVanKhan"
        app:layout_constraintTop_toBottomOf="@+id/viewTuVi"
        app:title="@string/tv_tinh_tuoi" />

    <com.jarvis.amlich.presentation.ui.widget.ViewDanhMucVanNien
        android:id="@+id/viewVanKhan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/px8"
        android:layout_marginTop="@dimen/px16"
        android:layout_marginEnd="@dimen/px16"
        app:layout_constraintLeft_toRightOf="@id/viewTinhTuoi"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewTuVi"
        app:title="@string/tv_van_khan" />
</androidx.constraintlayout.widget.ConstraintLayout>
