<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.jarvis.amlich.presentation.ui.widget.ViewToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:toolbarTitle="@string/tv_title_add" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTitleNote"
            style="@style/T16H20M"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/px16"
            android:layout_marginTop="@dimen/px16"
            android:layout_marginEnd="@dimen/px16"
            android:text="@string/tv_title_note"
            android:textColor="@color/ink_5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etTitle"
            style="@style/T14H20M"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/px16"
            android:layout_marginTop="@dimen/px8"
            android:hint="@string/hint_title_note"
            android:maxLength="30"
            android:textColor="@color/ink_5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitleNote" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDesNote"
            style="@style/T16H20M"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/px16"
            android:layout_marginTop="@dimen/px16"
            android:layout_marginEnd="@dimen/px16"
            android:text="@string/tv_des_note"
            android:textColor="@color/ink_5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etTitle" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etDes"
            style="@style/T14H20M"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/px16"
            android:layout_marginTop="@dimen/px8"
            android:hint="@string/hint_des_note"
            android:maxLength="100"
            android:textColor="@color/ink_5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDesNote" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTitleTime"
            style="@style/T14H20M"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/px16"
            android:layout_marginTop="@dimen/px16"
            android:layout_marginEnd="@dimen/px16"
            android:text="@string/tv_note_time"
            android:textColor="@color/ink_5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etDes" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/clTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/px32"
            android:layout_marginTop="@dimen/px16"
            android:background="@drawable/bg_boder_pri_3"
            android:gravity="center"
            android:paddingHorizontal="@dimen/px16"
            android:paddingVertical="@dimen/px8"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitleTime">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvHour"
                style="@style/T16H20M"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/ink_5"
                tools:text="8" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvDot"
                style="@style/T16H20M"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/px4"
                android:text=":"
                android:textColor="@color/ink_5" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvMinute"
                style="@style/T16H20M"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/px4"
                android:textColor="@color/ink_5"
                tools:text="00" />
        </androidx.appcompat.widget.LinearLayoutCompat>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/px16"
            android:layout_marginTop="@dimen/px16"
            android:background="@drawable/bg_boder_pri_2"
            android:text="@string/saveButton"
            android:textColor="@color/bg_01"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/clTime" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>